# Quant-Enthusiasts-Risk-Engine

./: .dockerignore  .gitignore  Dockerfile  HOW_TO_BUILD_ETC.md  README.md  SETUP.md  deloyment.txt  render.yaml  run_tests.sh  start.sh  test_installed_module.py
.github/workflows/: ci.yml
Docs/: INSTALLATION.md  api_reference.md  contributing_guide.md  deployment_guide.md  development_guide.md  faq_guide.md  market_data_guide.md  quickstart_guide.md  troubleshooting_guide.md
cpp_engine/: CMakeLists.txt
cpp_engine/apps/: CMakeLists.txt
cpp_engine/libraries/: CMakeLists.txt
cpp_engine/libraries/python_interface/: CMakeLists.txt
cpp_engine/libraries/qe_risk_engine/: CMakeLists.txt  qe_risk_engine
cpp_engine/libraries/qe_risk_engine/includes/: BinomialTree.h  BlackScholes.h  Instrument.h  QuantLibPricingEngine.h
cpp_engine/libraries/qe_risk_engine/src/: BinomialTree.cpp  BlackScholes.cpp  Instrument.cpp  QuantLibPricingEngine.cpp
cpp_engine/tests/: CMakeLists.txt
cpp_engine/tests/src/: test_quantlib_integration.cpp
python_api/: .env  .env.development  .env.example  =0.2.28  app.py  requirements.txt
react_dashboard/: .env.production  .gitignore  GETTING_STARTED.md  index.html  package-lock.json  package.json  sample.env  tailwind.config.js  tsconfig.json  vite.config.ts
react_dashboard/src/: App.tsx  index.css  vite-env.d.ts
react_dashboard/src/components/Documentation/sections/: APISection.tsx  ArchitectureSection.tsx  DeploymentSection.tsx  MarketDataSection.tsx  OverviewSection.tsx  PricingSection.tsx  QuickStartSection.tsx  RiskSection.tsx  TroubleshootingSection.tsx  index.ts
react_dashboard/src/components/Header/: Header.tsx
react_dashboard/src/components/MarketData/: MarketDataSection.tsx
react_dashboard/src/components/Portfolio/: InstrumentForm.tsx  PortfolioSection.tsx  PortfolioTable.tsx
react_dashboard/src/components/RiskAnalysis/: MetricCard.tsx  RiskAnalysisSection.tsx
react_dashboard/src/components/common/: StatusIndicator.tsx
react_dashboard/src/components/ui/: DocumentationButton.tsx  ErrorMessage.tsx  Spinner.tsx  StatusIndicator.tsx
react_dashboard/src/config/: constants.ts
react_dashboard/src/data/: documentationSections.ts
react_dashboard/src/hooks/: useApiHealth.ts  usePortfolio.ts
react_dashboard/src/pages/: Dashboard.tsx  Documentation.tsx
react_dashboard/src/services/: api.service.ts
react_dashboard/src/types/: index.ts
react_dashboard/src/utils/: helpers.ts
